Fix screen overflow

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ button:active {
 h1 {
     font-size: 3rem;
     font-weight: 300;
+    overflow: auto;
 }
 
 h3 {
